-another fix for Bug #80, because the old one disabled the align-feature - removed background, padding and border for widgets placed on 2D pages, which causes the width-attribute to work properly

--- a/CometVisu/trunk/src/designs/metal/basic.css
+++ b/CometVisu/trunk/src/designs/metal/basic.css
@@ -91,14 +91,24 @@ body br
 .widget_container {
   float: left;
   width: 100%;
-  /* position: relative; // this setting breaks the 2D pages  */
+  position: relative;
+}
+.page > .clearfix > embed ~ .widget_container, .page > .clearfix > img ~ .widget_container {
+	position: static;
+	display: table-cell;
+}
+.page > .clearfix > embed ~ .widget_container .widget, .page > .clearfix > img ~ .widget_container .widget {
+	box-sizing: border-box;
+	display: box;
+	background-image: none;
+	padding: 0;
+	border-width:0;
 }
 .widget_container.break_container {
     line-height: 0px;
 }
 .navbar .widget_container {
   display: block;
-  position: relative;
 }
 .widget
 {
